# 2D_lidar_person_detection

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
dr_spaam/: ckpts
dr_spaam/cfgs/: base_dr_spaam_drow_cfg.yaml  base_dr_spaam_jrdb_cfg.yaml  base_drow_drow_cfg.yaml
dr_spaam/dr_spaam/: detector.py  pseudo_labels.py
dr_spaam/dr_spaam/datahandle/: __init__.py  drow_handle.py  jrdb_handle.py  jrdb_handle_det3d.py
dr_spaam/dr_spaam/dataset/: __init__.py  drow_dataset.py  jrdb_dataset.py
dr_spaam/dr_spaam/model/: __init__.py  dr_spaam.py  dr_spaam_fn.py  get_model.py
dr_spaam/dr_spaam/pipeline/: __init__.py  logger.py  optim.py  pipeline.py  trainer.py
dr_spaam/dr_spaam/utils/: jrdb_transforms.py  plotting.py  precision_recall.py  utils.py
dr_spaam/dr_spaam/utils/pytorch_nms/: setup.py
dr_spaam/tests/: test_detector.py  test_detr_dataloader.py  test_inference_speed.py  test_jrdb_handle_mayavi.py
dr_spaam/utils/: get_pseudo_label_videos.py  train.py  train_ft.py
dr_spaam_ros/: CMakeLists.txt  example.rviz  package.xml  requirements.txt  setup.py
dr_spaam_ros/config/: dr_spaam_ros.yaml  topics.yaml
dr_spaam_ros/dr_spaam/: setup.py
dr_spaam_ros/dr_spaam/cfgs/: base_dr_spaam_drow_cfg.yaml  base_dr_spaam_jrdb_cfg.yaml  base_drow_jrdb_cfg.yaml
dr_spaam_ros/dr_spaam/dr_spaam/: detector.py
dr_spaam_ros/dr_spaam/dr_spaam/datahandle/: _pypcd.py
dr_spaam_ros/dr_spaam/dr_spaam/dataset/: builder.py
dr_spaam_ros/dr_spaam/dr_spaam/model/: __init__.py  _common.py  dr_spaam.py  dr_spaam_fn.py  drow_net.py  get_model.py  losses.py
dr_spaam_ros/dr_spaam/dr_spaam/pipeline/: trainer.py
dr_spaam_ros/dr_spaam/dr_spaam/utils/: jrdb_utils.py  plotting.py
dr_spaam_ros/dr_spaam/dr_spaam/utils/pytorch_nms/: README.md
dr_spaam_ros/dr_spaam/dr_spaam/utils/pytorch_nms/src/: nms_kernel.cu
dr_spaam_ros/dr_spaam/tests/: test_dataloader.py  test_drow_handle.py  test_jrdb_handle.py
dr_spaam_ros/launch/: dr_spaam_ros.launch
dr_spaam_ros/scripts/: drow_data_converter.py  node.py
dr_spaam_ros/src/dr_spaam_ros/: dr_spaam_ros.py
